# broadvoice

./: Makefile.am  Makefile.in  README.md  config-h.in  configure  configure.ac
debian/: .gitignore  changelog  control  copyright  libbroadvoice-dev.install  libbroadvoice1.install  rules  watch
doc/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  bitpack16.c  bitpack16.h  bitpack32.c  bitpack32.h  broadvoice.dsp  broadvoice.vcproj
src/broadvoice/: broadvoice.h
src/floating/bv16/: bv16decoder.c  bv16encoder.c  bv16lspquan.c  bv16plc.c
src/floating/bv32/: bv32decoder.c  bv32encoder.c  bv32lspquan.c  bv32plc.c
src/floating/common/: a2lsp.c
test-data/: Makefile.in
test-data/broadcom/: Makefile.in
test-data/broadcom/fixed/: Makefile.in
test-data/broadcom/fixed/bv16/: Makefile.in
test-data/broadcom/fixed/bv32/: Makefile.in
test-data/broadcom/floating/: Makefile.in
test-data/broadcom/floating/bv16/: Makefile.in
test-data/broadcom/floating/bv32/: Makefile.in
test-data/local/: Makefile.in
tests/: Makefile.am  Makefile.in  broadvoice_tests.c  bv16_floating_tests.sh  bv16_tests.c  bv32_floating_tests.sh  bv32_tests.c  g192_bit_stream.c  regression_tests.sh.in
